--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/post_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@+id/input_post_title"
+                app:layout_constraintBottom_toTopOf="@+id/input_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -105,7 +105,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
-                android:id="@+id/input_post_title"
+                android:id="@+id/input_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -123,12 +123,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/post_header"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/input_post_body"
+                app:layout_constraintBottom_toTopOf="@id/input_body"
                 android:background="@drawable/bg_single_post"
             />
 
             <EditText
-                android:id="@+id/input_post_body"
+                android:id="@+id/input_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -144,7 +144,7 @@
                 android:layout_marginVertical="5dp"
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/input_post_title"
+                app:layout_constraintTop_toBottomOf="@+id/input_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/post_img"
@@ -161,7 +161,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/input_post_body"
+                app:layout_constraintTop_toBottomOf="@+id/input_body"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="parent"
