--- a/app/src/main/res/layout/content_editdialog.xml
+++ b/app/src/main/res/layout/content_editdialog.xml
@@ -6,8 +6,38 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
+    <TextView
+        android:id="@+id/content_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Question"
+        android:maxLength="200"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAlignment="textStart"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginVertical="5dp"
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/input_title"
+        />
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_edit"
+        app:layout_constraintStart_toEndOf="@id/content_title"
+        app:layout_constraintTop_toTopOf="@id/content_title"
+        app:layout_constraintBottom_toBottomOf="@id/content_title"
+        />
+
     <EditText
-        android:id="@+id/input_post_title"
+        android:id="@+id/input_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
@@ -22,15 +52,15 @@
         android:layout_marginVertical="5dp"
         android:paddingVertical="10dp"
         android:paddingHorizontal="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/content_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/input_post_body"
+        app:layout_constraintBottom_toTopOf="@id/input_body"
         android:background="@drawable/bg_single_post"
         />
 
     <EditText
-        android:id="@+id/input_post_body"
+        android:id="@+id/input_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
@@ -46,7 +76,7 @@
         android:layout_marginVertical="5dp"
         android:paddingVertical="10dp"
         android:paddingHorizontal="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/input_post_title"
+        app:layout_constraintTop_toBottomOf="@+id/input_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
