--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -18,8 +18,8 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="fitCenter"
+            android:layout_height="130dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_eduforum"
             app:layout_constraintBottom_toTopOf="@+id/appName"
             app:layout_constraintEnd_toEndOf="parent"
