--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ForgotPasswordActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                     android:layout_marginEnd="24dp"
                     android:gravity="center"
                     android:paddingHorizontal="2dp"
-                    android:text="@string/welcome_to_eduforum"
+                    android:text="@string/forgot_password"
                     android:textAlignment="center"
                     android:textColor="@color/design_default_color_primary"
                     android:textSize="30sp"
@@ -56,14 +56,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="35dp"
                     android:layout_marginEnd="24dp"
                     android:gravity="center"
-                    android:paddingHorizontal="2dp"
-                    android:text="@string/sign_in_welcome"
+                    android:justificationMode="inter_word"
+                    android:paddingHorizontal="25dp"
+                    android:text="Enter the email address of your EduForum account and click RESET PASSWORD. Then, you will receive an email with a link to change your password."
                     android:textAlignment="center"
-                    android:textColor="@color/light_gray"
-                    android:textSize="25sp"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@id/username"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +76,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="96dp"
+                    android:layout_marginTop="55dp"
                     android:layout_marginEnd="24dp"
                     android:background="@drawable/bg_single_post"
                     android:hint="@string/prompt_email"
@@ -88,84 +89,39 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvWelcome2" />
 
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="24dp"
-                    android:background="@drawable/bg_single_post"
-                    android:hint="@string/prompt_password"
-                    android:imeActionLabel="Done"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:padding="10dp"
-                    android:selectAllOnFocus="true"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/username" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/forgotPasswordNav"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="24dp"
-                    android:gravity="center"
-                    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/password">
-
-                    <TextView
-                        android:id="@+id/tvForgotPassword"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="2dp"
-                        android:text="@string/forgot_password"
-                        android:textColor="@color/design_default_color_primary"
-                        android:textSize="15sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
                 <Button
-                    android:id="@+id/btnLogin"
+                    android:id="@+id/btnResetPassword"
                     style="@style/LoginButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:layout_marginStart="24dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="24dp"
                     android:enabled="false"
-                    android:text="@string/action_sign_in"
-                    app:layout_constraintBottom_toTopOf="@id/registerNav"
+                    android:text="Reset Password"
+                    app:layout_constraintBottom_toTopOf="@id/loginNav"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordNav"
+                    app:layout_constraintTop_toBottomOf="@+id/username"
                     app:layout_constraintVertical_bias="0.2" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/registerNav"
+                    android:id="@+id/loginNav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:gravity="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/btnLogin">
+                    app:layout_constraintTop_toBottomOf="@+id/btnResetPassword">
 
                     <TextView
                         android:id="@+id/tv1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingHorizontal="2dp"
-                        android:text="@string/don_t_have_an_account"
+                        android:text="Go to"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -178,7 +134,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="start"
                         android:paddingHorizontal="2dp"
-                        android:text="@string/register_here"
+                        android:text="Sign In"
                         android:textColor="@color/design_default_color_primary"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -186,45 +142,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <TextView
-                    android:id="@+id/divider"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:text="--- OR ---"
-                    android:textColor="@color/dark_gray"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/registerNav" />
-
-                <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
-                    android:id="@+id/btnLoginHwId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginBottom="64dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/divider" />
-
-                <ProgressBar
-                    android:id="@+id/loading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="32dp"
-                    android:layout_marginTop="64dp"
-                    android:layout_marginEnd="32dp"
-                    android:layout_marginBottom="64dp"
-                    android:indeterminateTint="@color/design_default_color_primary"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/password"
-                    app:layout_constraintStart_toStartOf="@+id/password"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.3" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
